--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <title>NBA Data Visualization</title>
 
-  <!-- Optional external CSS file if you have one -->
+  <!-- external CSS file -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Minimal inline styles so it still looks good -->
+  <!-- inline styles -->
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -94,7 +94,7 @@
   <!-- D3 library -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <!-- Your main D3 code -->
+  <!-- main D3 code -->
   <script src="main.js"></script>
 </body>
 </html>
