--- a/docs.html
+++ b/docs.html
@@ -228,26 +228,27 @@
     </section>
 
     <!-- 6. Demo Video -->
-    <section class="section">
-      <h2>6. Demo Video (2–4 Minutes)</h2>
-      <p>
-        The video below demonstrates how to use the interactive visualization. It walks through the main controls,
-        shows how to switch between points, rebounds, and assists, and explains how changing the minimum games played
-        filter affects the trends.
-      </p>
-      <p>
-        Once the video is recorded and uploaded to YouTube, the <code>VIDEO_ID</code> in the embed link should be
-        replaced with the actual ID of the uploaded video.
-      </p>
-      <iframe
-        id="demo-video"
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/VIDEO_ID"
-        title="NBA Age & Performance Demo"
-        allowfullscreen>
-      </iframe>
-    </section>
-  </main>
+<section class="section">
+  <h2>6. Demo Video </h2>
+  <p>
+    The video below demonstrates how to use the interactive visualization. It walks through the main controls,
+    shows how to switch between points, rebounds, and assists, and explains how changing the minimum games played
+    filter affects the trends.
+  </p>
+  <p>
+    Once the video is recorded and uploaded to YouTube, the <code>VIDEO_ID</code> in the embed link has been
+    replaced with the actual ID of the uploaded video.
+  </p>
+
+  <iframe
+    id="demo-video"
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/9yAZ_jXl_qg"
+    title="NBA Age & Performance Demo"
+    allowfullscreen>
+  </iframe>
+</section>
+</main>
 </body>
 </html>
